--- a/vtm/index.html
+++ b/vtm/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Cut&display=swap" rel="stylesheet"> 
     <script type="module" src="./generator-vtm.js"></script>
+    <!--force Github update-->
     <title>Generate Your Character</title>
 </head>
 <body>
